--- a/index.html
+++ b/index.html
@@ -8,14 +8,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="background">
-        <main id="fullpage">
-            <section class="section"><p>hello</p></section>
-            <section class="section">2</section>
-            <section class="section">3</section>
-        </main>
-    </div>
-
+    <canvas id="canvas-club"></canvas>
+    <main id="fullpage">
+        <section class="section">
+            <p><a href="#">Hello</a></p></section>
+        <section class="section">2</section>
+        <section class="section">3</section>
+    </main>
+        
+    <script src="animation/animation.js"></script>
 	<script src="fullpage/fullpage.min.js"></script>
     <script src="http://code.jquery.com/jquery-latest.min.js"></script>
     <script src="script.js"></script>
