--- a/index.html
+++ b/index.html
@@ -8,12 +8,39 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <!-- Canvas for background animation -->
     <canvas id="canvas-club"></canvas>
+
+    <!-- Header with links and burger navBar -->
+    <header class="d-flex jc-between align-center">
+        <p class="margin-none"><a href="#">Vigneaud Alexandre</a></p>
+        <div class="d-flex align-center">
+            <div class="d-flex ">
+                <p><a href="https://github.com/AlxandrV"><img src="media/github-icon.png" alt="github icon tête de chat dans un cercle" width="26" height="26"></a></p>
+                <p><a href="https://www.linkedin.com/in/alexandre-vigneaud-1843b519a/"><img src="media/linkedin-icon.png" alt="linkedin icon lettre i et n dans un cercle" width="26" height="26"></a></p>
+            </div>
+            <!-- Burger -->
+            <div class="burger d-flex align-center">
+                <span></span>
+            </div>
+        </div>
+        <nav class="d-flex jc-center align-center">
+            <ul id="navLinks" class="margin-none">
+                <li><a class="disable" href="#home">HOME</a></li>
+                <li><a class="disable" href="#project">PROJECT</a></li>
+                <li><a class="disable" href="#about">ABOUT</a></li>
+                <li><a class="disable" href="#contact">CONTACT</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <!-- Main JQuery Fullpage.js -->
     <main id="fullpage">
-        <section class="section">
+        <section class="section" id="home">
             <p><a href="#">Hello</a></p></section>
-        <section class="section">2</section>
-        <section class="section">3</section>
+        <section class="section" id="project">2</section>
+        <section class="section" id="about">3</section>
+        <section class="section" id="section">3</section>
     </main>
         
     <script src="animation/animation.js"></script>
