Add - data anchor for section

--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
 
     <!-- Main JQuery Fullpage.js -->
     <main id="fullpage">
-        <section class="section" id="home">
+        <section class="section" data-anchor="home">
             <p><a href="#">Hello</a></p></section>
-        <section class="section" id="project">2</section>
-        <section class="section" id="about">3</section>
-        <section class="section" id="section">3</section>
+        <section class="section" data-anchor="project">2</section>
+        <section class="section" data-anchor="about">3</section>
+        <section class="section" data-anchor="contact">4</section>
     </main>
         
     <script src="animation/animation.js"></script>
