Add - content second section

--- a/index.html
+++ b/index.html
@@ -47,8 +47,9 @@
 
     <!-- Main JQuery Fullpage.js -->
     <main id="fullpage">
+        <!-- Home section -->
         <section class="section" data-anchor="home">
-            <div class="d-flex jc-between">
+            <div class="d-flex jc-between align-center">
                 <div class="content-section">
                     <h1 class="margin-none">VIGNEAUD ALEXANDRE</h1>
                     <div class="d-flex">
@@ -64,8 +65,37 @@
                 </div>
             </div>
         </section>
-        <section class="section" data-anchor="project">2</section>
-        <section class="section" data-anchor="about">3</section>
+        <!-- Project section -->
+        <section class="section" data-anchor="project">
+            <div class="d-flex jc-between align-center">
+                <div class="content-section">
+                    <h1 class="margin-none">Natural Coach</h1>
+                    <div class="d-flex">
+                        <span></span>
+                        <span></span>
+                    </div>
+                    <p>projet de gestion de base de données</p>
+                </div>
+                <div class="illustration-content">
+                    <p><img src="media/illustration-project.jpg" alt="photo de montagne avec randonneur au premier plan" width="1368" height="1365"></p>
+                </div>
+            </div>
+        </section>
+        <!-- About section -->
+        <section class="section" data-anchor="about">
+            <div class="d-flex jc-between align-center">
+                <div class="content-section">
+                    <h1 class="margin-none">Qui je suis</h1>
+                    <div class="d-flex">
+                        <span></span>
+                        <span></span>
+                    </div>
+                    <p>projet de gestion de base de données</p>
+                </div>
+                <div class="illustration-content">
+                </div>
+            </div>
+        </section>
         <section class="section" data-anchor="contact">4</section>
     </main>
 
