Add - content third section

--- a/index.html
+++ b/index.html
@@ -93,6 +93,11 @@
                     <p>projet de gestion de base de données</p>
                 </div>
                 <div class="illustration-content">
+                    <div class="window">
+                        <div class="rain"></div>
+                        <div class="window-inside">
+                        </div>
+                      </div>
                 </div>
             </div>
         </section>
