--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header class="d-flex jc-between align-center">
         <p class="margin-none"><a href="#">Vigneaud Alexandre</a></p>
         <div class="d-flex align-center">
-            <div class="d-flex ">
+            <div class="d-flex social-links">
                 <p><a href="https://github.com/AlxandrV"><img src="media/github-icon.png" alt="github icon tête de chat dans un cercle" width="26" height="26"></a></p>
                 <p><a href="https://www.linkedin.com/in/alexandre-vigneaud-1843b519a/"><img src="media/linkedin-icon.png" alt="linkedin icon lettre i et n dans un cercle" width="26" height="26"></a></p>
             </div>
@@ -75,6 +75,9 @@
                         <span></span>
                     </div>
                     <p>projet de gestion de base de données</p>
+                    <div class="btn">
+                        <a href="#" target="_blank" rel="noopener noreferrer">Voir le projet</a>
+                    </div>
                 </div>
                 <div class="illustration-content">
                     <p><img src="media/illustration-project.jpg" alt="photo de montagne avec randonneur au premier plan" width="1368" height="1365"></p>
@@ -101,7 +104,31 @@
                 </div>
             </div>
         </section>
-        <section class="section" data-anchor="contact">4</section>
+        <!-- Contact section -->
+        <section class="section" data-anchor="contact">
+            <div class="d-flex jc-between align-center">
+                <div class="content-section">
+                    <h1 class="margin-none">Contact</h1>
+                    <div class="d-flex">
+                        <span></span>
+                        <span></span>
+                    </div>
+                    <p><a href="mailto:a.vigneaud@gmail.com">a.vigneaud@gmail.com</p>
+                    <div class="d-flex social-links">
+                        <p><a href="https://github.com/AlxandrV"><img src="media/github-icon.png" alt="github icon tête de chat dans un cercle" width="26" height="26"></a></p>
+                        <p><a href="https://www.linkedin.com/in/alexandre-vigneaud-1843b519a/"><img src="media/linkedin-icon.png" alt="linkedin icon lettre i et n dans un cercle" width="26" height="26"></a></p>
+                    </div>
+                </div>
+                <div class="illustration-content">
+                    <div class="window">
+                        <div class="rain"></div>
+                        <div class="window-inside">
+                        </div>
+                      </div>
+                </div>
+            </div>
+
+        </section>
     </main>
 
         
