--- a/index.html
+++ b/index.html
@@ -96,11 +96,6 @@
                     <p>projet de gestion de base de données</p>
                 </div>
                 <div class="illustration-content">
-                    <div class="window">
-                        <div class="rain"></div>
-                        <div class="window-inside">
-                        </div>
-                      </div>
                 </div>
             </div>
         </section>
@@ -134,7 +129,8 @@
         
     <script src="animation/animation.js"></script>
 	<script src="fullpage/fullpage.min.js"></script>
-    <script src="http://code.jquery.com/jquery-latest.min.js"></script>
-    <script src="script.js"></script>
+    <script src="http://code.jquery.com/jquery-3.5.1.min.js"
+    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+    crossorigin="anonymous"></script>    <script src="script.js"></script>
 </body>
 </html>
