Update - fusion section about and section contact

--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
             <ul id="navLinks" class="margin-none">
                 <li><a class="disable" href="#home">HOME</a></li>
                 <li><a class="disable" href="#project">PROJECT</a></li>
-                <li><a class="disable" href="#about">ABOUT</a></li>
                 <li><a class="disable" href="#contact">CONTACT</a></li>
             </ul>
         </nav>
@@ -74,7 +73,7 @@
                         <span></span>
                         <span></span>
                     </div>
-                    <p>projet de gestion de base de données</p>
+                    <p>projet de gestion de planning, de membre et de groupe d'excursion pour un site de randonée</p>
                     <div class="btn">
                         <a href="#" target="_blank" rel="noopener noreferrer">Voir le projet</a>
                     </div>
@@ -84,28 +83,21 @@
                 </div>
             </div>
         </section>
-        <!-- About section -->
-        <section class="section" data-anchor="about">
-            <div class="d-flex jc-between align-center">
-                <div class="content-section">
-                    <h1 class="margin-none">Qui je suis</h1>
-                    <div class="d-flex">
-                        <span></span>
-                        <span></span>
-                    </div>
-                    <p>projet de gestion de base de données</p>
-                </div>
-                <div class="illustration-content">
-                </div>
-            </div>
-        </section>
         <!-- Contact section -->
         <section class="section" data-anchor="contact">
             <div class="d-flex jc-between align-center">
                 <div class="content-section">
-                    <h1 class="margin-none">Contact</h1>
+                    <h1 class="margin-none">A propos</h1>
                     <div class="d-flex">
                         <span></span>
+                        <span class="star"></span>
+                    </div>
+                    <p>"La beauté déteste les idées. Elle se suffit à elle-même. une oeuvre est belle comme quelqu'un est beau. Cette beauté dont je parle provoque une érection de l'âme. une érection ne se discute pas" - Jean Cocteau.</p>
+                </div>
+                <div class="content-section right d-flex column">
+                    <h1 class="margin-none">Contact</h1>
+                    <div class="d-flex">
+                        <span class="star"></span>
                         <span></span>
                     </div>
                     <p><a href="mailto:a.vigneaud@gmail.com">a.vigneaud@gmail.com</p>
@@ -114,15 +106,7 @@
                         <p><a href="https://www.linkedin.com/in/alexandre-vigneaud-1843b519a/"><img src="media/linkedin-icon.png" alt="linkedin icon lettre i et n dans un cercle" width="26" height="26"></a></p>
                     </div>
                 </div>
-                <div class="illustration-content">
-                    <div class="window">
-                        <div class="rain"></div>
-                        <div class="window-inside">
-                        </div>
-                      </div>
-                </div>
             </div>
-
         </section>
     </main>
 
