Add - media queries

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header class="d-flex jc-between align-center">
         <p class="margin-none"><a href="#">Vigneaud Alexandre</a></p>
         <div class="d-flex align-center">
-            <div class="d-flex social-links">
+            <div class="d-flex social-links large-media">
                 <p><a href="https://github.com/AlxandrV"><img src="media/github-icon.png" alt="github icon tête de chat dans un cercle" width="26" height="26"></a></p>
                 <p><a href="https://www.linkedin.com/in/alexandre-vigneaud-1843b519a/"><img src="media/linkedin-icon.png" alt="linkedin icon lettre i et n dans un cercle" width="26" height="26"></a></p>
             </div>
@@ -25,12 +25,17 @@
             </div>
         </div>
         <!-- navLinks -->
-        <nav class="d-flex jc-center align-center">
+        <nav class="d-flex jc-center align-center column">
             <ul id="navLinks" class="margin-none">
                 <li><a class="disable" href="#home">HOME</a></li>
                 <li><a class="disable" href="#project">PROJECT</a></li>
                 <li><a class="disable" href="#contact">CONTACT</a></li>
             </ul>
+            <div class="social-links short-media">
+                <p><a href="https://github.com/AlxandrV"><img src="media/github-icon.png" alt="github icon tête de chat dans un cercle" width="26" height="26"></a></p>
+                <p><a href="https://www.linkedin.com/in/alexandre-vigneaud-1843b519a/"><img src="media/linkedin-icon.png" alt="linkedin icon lettre i et n dans un cercle" width="26" height="26"></a></p>
+            </div>
+
         </nav>
     </header>
 
@@ -51,7 +56,7 @@
             <div class="d-flex jc-between align-center">
                 <div class="content-section">
                     <h1 class="margin-none">VIGNEAUD ALEXANDRE</h1>
-                    <div class="d-flex">
+                    <div class="d-flex separate">
                         <span></span>
                         <span></span>
                     </div>
@@ -68,8 +73,8 @@
         <section class="section" data-anchor="project">
             <div class="d-flex jc-between align-center">
                 <div class="content-section">
-                    <h1 class="margin-none">Natural Coach</h1>
-                    <div class="d-flex">
+                    <h2 class="margin-none">Natural Coach</h2>
+                    <div class="d-flex separate">
                         <span></span>
                         <span></span>
                     </div>
@@ -85,19 +90,19 @@
         </section>
         <!-- Contact section -->
         <section class="section" data-anchor="contact">
-            <div class="d-flex jc-between align-center">
+            <div class="d-flex jc-between align-center media-min">
                 <div class="content-section">
-                    <h1 class="margin-none">A propos</h1>
-                    <div class="d-flex">
+                    <h2 class="margin-none">A propos</h2>
+                    <div class="d-flex separate">
                         <span></span>
-                        <span class="star"></span>
+                        <span></span>
                     </div>
                     <p>"La beauté déteste les idées. Elle se suffit à elle-même. une oeuvre est belle comme quelqu'un est beau. Cette beauté dont je parle provoque une érection de l'âme. une érection ne se discute pas" - Jean Cocteau.</p>
                 </div>
                 <div class="content-section right d-flex column">
-                    <h1 class="margin-none">Contact</h1>
-                    <div class="d-flex">
-                        <span class="star"></span>
+                    <h2 class="margin-none">Contact</h2>
+                    <div class="d-flex separate">
+                        <span></span>
                         <span></span>
                     </div>
                     <p><a href="mailto:a.vigneaud@gmail.com">a.vigneaud@gmail.com</p>
