--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                         <span></span>
                         <span></span>
                     </div>
-                    <p><a href="mailto:a.vigneaud@gmail.com">a.vigneaud@gmail.com</p>
+                    <p><a href="mailto:a.vigneaud@gmail.com">a.vigneaud@gmail.com</a></p>
                     <div class="d-flex social-links">
                         <p><a href="https://github.com/AlxandrV"><img src="media/github-icon.png" alt="github icon tête de chat dans un cercle" width="26" height="26"></a></p>
                         <p><a href="https://www.linkedin.com/in/alexandre-vigneaud-1843b519a/"><img src="media/linkedin-icon.png" alt="linkedin icon lettre i et n dans un cercle" width="26" height="26"></a></p>
