Update - responsive defaut

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <!-- Header with links and burger navBar -->
     <header class="d-flex jc-between align-center">
-        <p class="margin-none"><a href="#">Vigneaud Alexandre</a></p>
+        <p class="margin-none"><a href="">Vigneaud Alexandre</a></p>
         <div class="d-flex align-center">
             <div class="d-flex social-links large-media">
                 <p><a href="https://github.com/AlxandrV"><img src="media/github-icon.png" alt="github icon tête de chat dans un cercle" width="26" height="26"></a></p>
@@ -96,7 +96,7 @@
                         <span></span>
                     </div>
                     <p><a href="mailto:a.vigneaud@gmail.com">a.vigneaud@gmail.com</a></p>
-                    <div class="d-flex social-links">
+                    <div class="d-flex social-links short-media">
                         <p><a href="https://github.com/AlxandrV"><img src="media/github-icon.png" alt="github icon tête de chat dans un cercle" width="26" height="26"></a></p>
                         <p><a href="https://www.linkedin.com/in/alexandre-vigneaud-1843b519a/"><img src="media/linkedin-icon.png" alt="linkedin icon lettre i et n dans un cercle" width="26" height="26"></a></p>
                     </div>
