Add - section about

--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
                 </div>
             </div>
         </section>
-        <!-- Contact section -->
-        <section class="section" data-anchor="contact">
+        <!-- About section -->
+        <section class="section" data-anchor="about">
             <div class="d-flex jc-between align-center media-min">
                 <div class="content-section">
                     <h2 class="margin-none">A propos</h2>
@@ -87,15 +87,12 @@
                         <span></span>
                         <span></span>
                     </div>
-                    <p>"La beauté déteste les idées. Elle se suffit à elle-même. une oeuvre est belle comme quelqu'un est beau. Cette beauté dont je parle provoque une érection de l'âme. une érection ne se discute pas" - Jean Cocteau.</p>
+                    <p class="citation">"La beauté déteste les idées. Elle se suffit à elle-même. une oeuvre est belle comme quelqu'un est beau. Cette beauté dont je parle provoque une érection de l'âme. une érection ne se discute pas" - Jean Cocteau.</p>
                 </div>
                 <div class="content-section right d-flex column">
-                    <h2 class="margin-none">Contact</h2>
-                    <div class="d-flex separate">
-                        <span></span>
-                        <span></span>
-                    </div>
-                    <p><a href="mailto:a.vigneaud@gmail.com">a.vigneaud@gmail.com</a></p>
+                    <h3 class="margin-none">Créatif et passionné</h3>
+                    <p>Adepte du vintage dans ma vie comme dans mon travaille, celui-ci à pour but d'allier des solutions innovantes, de manière la plus simple et compréhensible possible.<br/>Privilégiant l'expérience utilisateur à la facilité technique, j'estime que chaque projet doit être unique et avoir une image qui lui est propre.</p>
+                    <p>Je réalise des intégations web responsive, ainsi que des systèmes de gestion de base de donées</p>
                     <div class="d-flex social-links short-media">
                         <p><a href="https://github.com/AlxandrV"><img src="media/github-icon.png" alt="github icon tête de chat dans un cercle" width="26" height="26"></a></p>
                         <p><a href="https://www.linkedin.com/in/alexandre-vigneaud-1843b519a/"><img src="media/linkedin-icon.png" alt="linkedin icon lettre i et n dans un cercle" width="26" height="26"></a></p>
@@ -103,6 +100,30 @@
                 </div>
             </div>
         </section>
+        <!-- Contact section -->
+        <section class="section" data-anchor="contact">
+            <div class="d-flex jc-between align-center media-min">
+                <div class="content-section">
+                    <h2 class="margin-none">Contact</h2>
+                    <div class="d-flex separate">
+                        <span></span>
+                        <span></span>
+                    </div>
+                    <form action="contact.php" class="d-flex column form">
+                        <input type="text" name="mail" id="mail" placeholder="Votre mail">
+                        <input type="text" name="object" id="object" placeholder="Object">
+                        <textarea name="message" id="message" cols="30" rows="10" placeholder="Votre message"></textarea>
+                    </form>
+                    <div class="d-flex social-links short-media">
+                        <p><a href="https://github.com/AlxandrV"><img src="media/github-icon.png" alt="github icon tête de chat dans un cercle" width="26" height="26"></a></p>
+                        <p><a href="https://www.linkedin.com/in/alexandre-vigneaud-1843b519a/"><img src="media/linkedin-icon.png" alt="linkedin icon lettre i et n dans un cercle" width="26" height="26"></a></p>
+                    </div>
+
+                </div>
+                <div class="content-section right d-flex column">
+                </div>
+            </div>
+        </section>        
     </main>
 
         
