Add - icon section about

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             <ul id="navLinks" class="margin-none">
                 <li><a class="disable" href="#home">HOME</a></li>
                 <li><a class="disable" href="#project">PROJECT</a></li>
+                <li><a class="disable" href="#about">A PROPOS</a></li>
                 <li><a class="disable" href="#contact">CONTACT</a></li>
             </ul>
             <div class="social-links short-media">
@@ -92,10 +93,10 @@
                 <div class="content-section right d-flex column">
                     <h3 class="margin-none">Créatif et passionné</h3>
                     <p>Adepte du vintage dans ma vie comme dans mon travaille, celui-ci à pour but d'allier des solutions innovantes, de manière la plus simple et compréhensible possible.<br/>Privilégiant l'expérience utilisateur à la facilité technique, j'estime que chaque projet doit être unique et avoir une image qui lui est propre.</p>
-                    <p>Je réalise des intégations web responsive, ainsi que des systèmes de gestion de base de donées</p>
-                    <div class="d-flex social-links short-media">
-                        <p><a href="https://github.com/AlxandrV"><img src="media/github-icon.png" alt="github icon tête de chat dans un cercle" width="26" height="26"></a></p>
-                        <p><a href="https://www.linkedin.com/in/alexandre-vigneaud-1843b519a/"><img src="media/linkedin-icon.png" alt="linkedin icon lettre i et n dans un cercle" width="26" height="26"></a></p>
+                    <p>Je réalise des intégations web responsive, ainsi que des systèmes de gestion de base de donées.</p>
+                    <div class="d-flex jc-between w-100">
+                        <img src="media/computer.png" alt="Image d'un écran pc fixe et à côté un écran de pc portable" width="200" height="200">
+                        <img src="media/hosting.png" alt="Image de serveurs empilé les uns sur les autres" width="200" height="200">
                     </div>
                 </div>
             </div>
