--- a/index.html
+++ b/index.html
@@ -89,6 +89,9 @@
                         <span></span>
                     </div>
                     <p class="citation">"La beauté déteste les idées. Elle se suffit à elle-même. une oeuvre est belle comme quelqu'un est beau. Cette beauté dont je parle provoque une érection de l'âme. une érection ne se discute pas" - Jean Cocteau.</p>
+                    <div class="btn cv">
+                        <a href="#" target="_blank" rel="noopener noreferrer">Mon CV</a>
+                    </div>
                 </div>
                 <div class="content-section right d-flex column">
                     <h3 class="margin-none">Créatif et passionné</h3>
@@ -114,6 +117,7 @@
                         <input type="text" name="mail" id="mail" placeholder="Votre mail">
                         <input type="text" name="object" id="object" placeholder="Object">
                         <textarea name="message" id="message" cols="30" rows="10" placeholder="Votre message"></textarea>
+                        <input type="submit" value="Envoyer" class="btn">
                     </form>
                     <div class="d-flex social-links short-media">
                         <p><a href="https://github.com/AlxandrV"><img src="media/github-icon.png" alt="github icon tête de chat dans un cercle" width="26" height="26"></a></p>
@@ -121,17 +125,18 @@
                     </div>
 
                 </div>
-                <div class="content-section right d-flex column">
+                <div class="maps-content d-flex jc-center align-center w-100">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d86648.65056491901!2d5.9422291600602914!3d47.26019416231606!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x478d62faf0ee130b%3A0x409ce34b313ed30!2s25000%20Besan%C3%A7on!5e0!3m2!1sfr!2sfr!4v1594995074048!5m2!1sfr!2sfr" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
                 </div>
             </div>
         </section>        
     </main>
 
-        
     <script src="animation/animation.js"></script>
 	<script src="fullpage/fullpage.min.js"></script>
     <script src="http://code.jquery.com/jquery-3.5.1.min.js"
     integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
-    crossorigin="anonymous"></script>    <script src="script.js"></script>
+    crossorigin="anonymous"></script>
+    <script src="script.js"></script>
 </body>
 </html>
