--- a/index.html
+++ b/index.html
@@ -113,10 +113,11 @@
                         <span></span>
                         <span></span>
                     </div>
-                    <form action="contact.php" class="d-flex column form">
-                        <input type="text" name="mail" id="mail" placeholder="Votre mail">
-                        <input type="text" name="object" id="object" placeholder="Object">
-                        <textarea name="message" id="message" cols="30" rows="10" placeholder="Votre message"></textarea>
+                    <form id="ajaxReq"class="d-flex column form">
+                        <input type="mail" name="mail" id="mail" placeholder="Votre adresse mail" required>
+                        <input type="text" name="object" id="object" placeholder="Object" required>
+                        <textarea name="message" id="message" cols="30" rows="10" placeholder="Votre message" required></textarea>
+                        <p id="hidden">Message envoyé.</p>
                         <input type="submit" value="Envoyer" class="btn">
                     </form>
                     <div class="d-flex social-links short-media">
