--- a/index.html
+++ b/index.html
@@ -94,10 +94,9 @@
                     </div>
                 </div>
                 <div class="content-section right d-flex column">
-                    <h3 class="margin-none">Créatif et passionné</h3>
                     <p>Adepte du vintage dans ma vie comme dans mon travaille, celui-ci à pour but d'allier des solutions innovantes, de manière la plus simple et compréhensible possible.<br/>Privilégiant l'expérience utilisateur à la facilité technique, j'estime que chaque projet doit être unique et avoir une image qui lui est propre.</p>
                     <p>Je réalise des intégations web responsive, ainsi que des systèmes de gestion de base de donées.</p>
-                    <div class="d-flex jc-between w-100">
+                    <div class="d-flex jc-between w-100" id="icon">
                         <img src="media/computer.png" alt="Image d'un écran pc fixe et à côté un écran de pc portable" width="200" height="200">
                         <img src="media/hosting.png" alt="Image de serveurs empilé les uns sur les autres" width="200" height="200">
                     </div>
@@ -116,7 +115,7 @@
                     <form id="ajaxReq"class="d-flex column form">
                         <input type="mail" name="mail" id="mail" placeholder="Votre adresse mail" required>
                         <input type="text" name="object" id="object" placeholder="Object" required>
-                        <textarea name="message" id="message" cols="30" rows="10" placeholder="Votre message" required></textarea>
+                        <textarea name="message" id="message" cols="30" rows="8" placeholder="Votre message" required></textarea>
                         <p id="hidden">Message envoyé.</p>
                         <input type="submit" value="Envoyer" class="btn">
                     </form>
