Update - conflit mail php

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     </div>
                     <p>projet de gestion de planning, de membre et de groupe d'excursion pour un site de randonée</p>
                     <div class="btn">
-                        <a href="#" target="_blank" rel="noopener noreferrer">Voir le projet</a>
+                        <a href="/natural_coach/index.php" target="_blank" rel="noopener noreferrer">Voir le projet</a>
                     </div>
                 </div>
                 <div class="illustration-content">
