Add - fonts paragraph

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                     </div>
                 </div>
                 <div class="content-section right d-flex column">
-                    <h3>Passioné et crétif</h3>
+                    <h3>Passioné et créatif</h3>
                     <p>Adepte du vintage dans ma vie comme dans mon travaille, celui-ci à pour but d'allier des solutions innovantes, de manière la plus simple et compréhensible possible.<br/>Privilégiant l'expérience utilisateur à la facilité technique, j'estime que chaque projet doit être unique et avoir une image qui lui est propre.</p>
                     <p>Je réalise des intégations web responsive, ainsi que des systèmes de gestion de base de donées.</p>
                     <div class="d-flex jc-between w-100" id="icon">
