--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
                         <span></span>
                         <span></span>
                     </div>
-                    <form id="ajaxReq"class="d-flex column form">
-                        <input type="mail" name="mail" id="mail" placeholder="Votre adresse mail" required>
+                    <form id="ajaxReq" class="d-flex column form">
+                        <input type="email" name="mail" id="mail" placeholder="Votre adresse mail" required>
                         <input type="text" name="object" id="object" placeholder="Object" required>
                         <textarea name="message" id="message" cols="30" rows="8" placeholder="Votre message" required></textarea>
                         <p id="hidden">Message envoyé.</p>
@@ -127,7 +127,7 @@
 
                 </div>
                 <div class="maps-content d-flex jc-center align-center w-100">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d86648.65056491901!2d5.9422291600602914!3d47.26019416231606!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x478d62faf0ee130b%3A0x409ce34b313ed30!2s25000%20Besan%C3%A7on!5e0!3m2!1sfr!2sfr!4v1594995074048!5m2!1sfr!2sfr" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d86648.65056491901!2d5.9422291600602914!3d47.26019416231606!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x478d62faf0ee130b%3A0x409ce34b313ed30!2s25000%20Besan%C3%A7on!5e0!3m2!1sfr!2sfr!4v1594995074048!5m2!1sfr!2sfr" width="600" height="450" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
                 </div>
             </div>
         </section>        
