Add - slider about section

--- a/index.html
+++ b/index.html
@@ -92,6 +92,19 @@
                     <div class="btn cv">
                         <a href="#" target="_blank" rel="noopener noreferrer">Mon CV</a>
                     </div>
+                    <div class="slider">
+                        <div class="wrap">
+                            <div class="wrap-content"><img src="media/icon-bootstrap.png" alt="Icon de Bootstrap, un b dans un carré"></div>
+                            <div class="wrap-content"><img src="media/icon-css.png" alt="Icon de CSS, un 3 dans un pentagone"width="128" height="128"></div>
+                            <div class="wrap-content"><img src="media/icon-git.png" alt="Icon de git, un carré à 45 degrés"width="128" height="128"></div>
+                            <div class="wrap-content"><img src="media/icon-html.png" alt="Icon de html, un 5 dans un pentagone"width="128" height="128"></div>
+                            <div class="wrap-content"><img src="media/icon-linux.png" alt="Icon de linux, un manchot assis"width="128" height="128"></div>
+                            <div class="wrap-content"><img src="media/icon-photoshop.png" alt="Icon de Photoshop, un P et un H dans un carré"width="128" height="128"></div>
+                            <div class="wrap-content"><img src="media/icon-php.png" alt="Icon de php, les lettre P, H et P"width="128" height="128"></div>
+                            <div class="wrap-content"><img src="media/icons-xd.png" alt="Icon de adobe XD, un X et un D dans un carré"width="128" height="128"></div>
+                            <div class="wrap-content"><img src="media/incon-mysql.png" alt="Icon de MySQL, un dauphin au-dessus du nom"width="128" height="128"></div>
+                        </div>
+                    </div>
                 </div>
                 <div class="content-section right d-flex column">
                     <h3>Passioné et créatif</h3>
