--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
                         <input type="text" name="object" id="object" placeholder="Object" required>
                         <textarea name="message" id="message" cols="30" rows="8" placeholder="Votre message" required></textarea>
                         <p id="hidden">Message envoyé.</p>
+                        <div class="g-recaptcha" data-sitekey="6LerjrQZAAAAAJ4St8nR59c2XBeeG4F7DAhJi0Cp"></div>        
                         <input type="submit" value="Envoyer" class="btn">
                     </form>
                     <div class="d-flex social-links short-media">
@@ -151,6 +152,7 @@
     <script src="http://code.jquery.com/jquery-3.5.1.min.js"
     integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
     crossorigin="anonymous"></script>
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
     <script src="script.js"></script>
 </body>
 </html>
