--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <p class="margin-none"><a href="">Vigneaud Alexandre</a></p>
         <div class="d-flex align-center">
             <div class="d-flex social-links large-media">
-                <p><a href="https://github.com/AlxandrV"><img src="media/github-icon.png" alt="github icon tête de chat dans un cercle" width="26" height="26"></a></p>
-                <p><a href="https://www.linkedin.com/in/alexandre-vigneaud-1843b519a/"><img src="media/linkedin-icon.png" alt="linkedin icon lettre i et n dans un cercle" width="26" height="26"></a></p>
+                <p><a href="https://github.com/AlxandrV" target="_blank" rel="noopener noreferrer"><img src="media/github-icon.png" alt="github icon tête de chat dans un cercle" width="26" height="26"></a></p>
+                <p><a href="https://www.linkedin.com/in/alexandre-vigneaud-1843b519a/" target="_blank" rel="noopener noreferrer"><img src="media/linkedin-icon.png" alt="linkedin icon lettre i et n dans un cercle" width="26" height="26"></a></p>
             </div>
             <!-- Burger -->
             <div class="burger d-flex align-center">
@@ -29,12 +29,12 @@
             <ul id="navLinks" class="margin-none">
                 <li><a class="disable" href="#home">HOME</a></li>
                 <li><a class="disable" href="#project">PROJECT</a></li>
-                <li><a class="disable" href="#about">A PROPOS</a></li>
+                <li><a class="disable" href="#about">À PROPOS</a></li>
                 <li><a class="disable" href="#contact">CONTACT</a></li>
             </ul>
             <div class="social-links short-media">
-                <p><a href="https://github.com/AlxandrV"><img src="media/github-icon.png" alt="github icon tête de chat dans un cercle" width="26" height="26"></a></p>
-                <p><a href="https://www.linkedin.com/in/alexandre-vigneaud-1843b519a/"><img src="media/linkedin-icon.png" alt="linkedin icon lettre i et n dans un cercle" width="26" height="26"></a></p>
+                <p><a href="https://github.com/AlxandrV" target="_blank" rel="noopener noreferrer"><img src="media/github-icon.png" alt="github icon tête de chat dans un cercle" width="26" height="26"></a></p>
+                <p><a href="https://www.linkedin.com/in/alexandre-vigneaud-1843b519a/" target="_blank" rel="noopener noreferrer"><img src="media/linkedin-icon.png" alt="linkedin icon lettre i et n dans un cercle" width="26" height="26"></a></p>
             </div>
 
         </nav>
@@ -61,7 +61,7 @@
             </div>
         </section>
         <!-- Project section -->
-        <section class="section" data-anchor="project">
+        <section class="section" data-anchor="project" id="project">
             <div class="d-flex jc-between align-center">
                 <div class="content-section">
                     <h2 class="margin-none">Natural Coach</h2>
@@ -70,6 +70,12 @@
                         <span></span>
                     </div>
                     <p>projet de gestion de planning, de membre et de groupe d'excursion pour un site de randonée</p>
+                    <ul class="list-icon">
+                        <li>Conception graphique et Webdesign</li>
+                        <li>Intégration HTML - CSS (Bootstrap)</li>
+                        <li>Gestion de base de donnée PHP - MySQL</li>
+                        <li>Site responsive</li>
+                    </ul>
                     <div class="btn">
                         <a href="/natural_coach/index.php" target="_blank" rel="noopener noreferrer">Voir le projet</a>
                     </div>
@@ -83,7 +89,7 @@
         <section class="section" data-anchor="about">
             <div class="d-flex jc-between align-center media-min">
                 <div class="content-section">
-                    <h2 class="margin-none">A propos</h2>
+                    <h2 class="margin-none">à propos</h2>
                     <div class="d-flex separate">
                         <span></span>
                         <span></span>
@@ -107,9 +113,9 @@
                     </div>
                 </div>
                 <div class="content-section right d-flex column">
-                    <h3>Passioné et créatif</h3>
+                    <h3>Passionné et créatif</h3>
                     <p>Adepte du vintage dans ma vie comme dans mon travaille, celui-ci à pour but d'allier des solutions innovantes, de manière la plus simple et compréhensible possible.<br/>Privilégiant l'expérience utilisateur à la facilité technique, j'estime que chaque projet doit être unique et avoir une image qui lui est propre.</p>
-                    <p>Je réalise des intégations web responsive, ainsi que des systèmes de gestion de base de donées.</p>
+                    <p>Je réalise des intégations web responsive, ainsi que des systèmes de gestion de base de données.</p>
                     <div class="d-flex jc-between w-100" id="icon">
                         <img src="media/computer.png" alt="Image d'un écran pc fixe et à côté un écran de pc portable" width="200" height="200">
                         <img src="media/hosting.png" alt="Image de serveurs empilé les uns sur les autres" width="200" height="200">
@@ -118,7 +124,7 @@
             </div>
         </section>
         <!-- Contact section -->
-        <section class="section" data-anchor="contact">
+        <section class="section" data-anchor="contact" id="contact">
             <div class="d-flex jc-between align-center media-min">
                 <div class="content-section">
                     <h2 class="margin-none">Contact</h2>
@@ -129,20 +135,18 @@
                     <form id="ajaxReq" class="d-flex column form">
                         <input type="email" name="mail" id="mail" placeholder="Votre adresse mail" required>
                         <input type="text" name="object" id="object" placeholder="Object" required>
-                        <textarea name="message" id="message" cols="30" rows="8" placeholder="Votre message" required></textarea>
+                        <textarea name="message" id="message" cols="30" rows="5" placeholder="Votre message" required></textarea>
                         <p id="hidden">Message envoyé.</p>
-                        <div class="g-recaptcha" data-sitekey="6LerjrQZAAAAAJ4St8nR59c2XBeeG4F7DAhJi0Cp"></div>        
+                        <div class="g-recaptcha" data-sitekey="6LfXlLQZAAAAAEe8ydsF7Ru6uWHwarxePdD-gNJI"></div>        
                         <input type="submit" value="Envoyer" class="btn">
                     </form>
                     <div class="d-flex social-links short-media">
-                        <p><a href="https://github.com/AlxandrV"><img src="media/github-icon.png" alt="github icon tête de chat dans un cercle" width="26" height="26"></a></p>
-                        <p><a href="https://www.linkedin.com/in/alexandre-vigneaud-1843b519a/"><img src="media/linkedin-icon.png" alt="linkedin icon lettre i et n dans un cercle" width="26" height="26"></a></p>
+                        <p><a href="https://github.com/AlxandrV" target="_blank" rel="noopener noreferrer"><img src="media/github-icon.png" alt="github icon tête de chat dans un cercle" width="26" height="26"></a></p>
+                        <p><a href="https://www.linkedin.com/in/alexandre-vigneaud-1843b519a/" ><img src="media/linkedin-icon.png" alt="linkedin icon lettre i et n dans un cercle" width="26" height="26"></a></p>
                     </div>
 
                 </div>
-                <div class="maps-content d-flex jc-center align-center w-100">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d86648.65056491901!2d5.9422291600602914!3d47.26019416231606!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x478d62faf0ee130b%3A0x409ce34b313ed30!2s25000%20Besan%C3%A7on!5e0!3m2!1sfr!2sfr!4v1594995074048!5m2!1sfr!2sfr" width="600" height="450" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
-                </div>
+                <div class="maps-content w-100" id="map"></div>
             </div>
         </section>        
     </main>
@@ -153,6 +157,7 @@
     integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
     crossorigin="anonymous"></script>
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDXShsCWRaCsgKo1QwVA1-Xx3jLvo698Bo&callback=initMap"></script>
     <script src="script.js"></script>
 </body>
 </html>
